# QApivara

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
ComplianceModule/: ComplianceChecker.cpp  ComplianceChecker.h  ComplianceHandle.cpp  ComplianceHandle.h  default_compliance.yaml
DSMatrizModule/: DSMatrizModule.cpp  DSMatrizModule.h  DSMatrizModuleSample.cpp  DSMatrizModuleSample.h
SafetyAnalyzer/: SafetyAnalyzer.cpp  SafetyAnalyzer.h
UI/: ComplianceGrid.cpp  ComplianceGrid.h  HomeTab.cpp  HomeTab.h  MainWindow.cpp  MainWindow.h
UI/Resources/: Resources.cpp  Resources.h
test/: sample_driver.c  second_driver.c  teste.c
test/include/: sample_driver.h  second_driver.h
test/sub_module/: sub_module_sample.c  sub_module_sample.h
